force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Reseller - VAR</fullName>
            </value>
            <value>
                <fullName>Reseller - VAR+PRO</fullName>
            </value>
            <value>
                <fullName>Reseller customer</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Master Parent Account</fullName>
            </value>
            <value>
                <fullName>Sunrise Status - Paying</fullName>
            </value>
            <value>
                <fullName>Sunrise Status - Churned</fullName>
            </value>
            <value>
                <fullName>Sunrise Status - Free Old</fullName>
            </value>
            <value>
                <fullName>Sunrise Status - Free New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>