force-app/main/default/objects/Account/fields/Data_ai_Client_placeholder__c.field-meta.xml
<CustomField>
    <fullName>Data_ai_Client_placeholder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In case the reason for &quot;Data.ai Overlap&quot; is from the Domain+Country. This is used in the &quot;Data.ai Overlap Reason&quot; formula field.</description>
    <label>App Intelligence Client placeholder</label>
    <type>Checkbox</type>
</CustomField>