force-app/main/default/objects/Account/fields/Data_Ai_Overlap__c.field-meta.xml
<CustomField>
    <fullName>Data_Ai_Overlap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this Account is a &quot;Data.Ai&quot; customer and we should not offer them App Annie or other Data.Ai Products.</description>
    <label>App Intelligence Overlap</label>
    <type>Checkbox</type>
</CustomField>