force-app/main/default/objects/Account/fields/Data_ai_Overlap_Reason__c.field-meta.xml
<CustomField>
    <fullName>Data_ai_Overlap_Reason__c</fullName>
    <formula>IF(
 Data_Ai_Overlap__c=true, 
  IF(Data_ai_Client_placeholder__c=true,&apos;Data.ai Client&apos;,
  TEXT(SW_Industry__c)),&quot;&quot;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App Intelligence Overlap Reason (Depreca</label>
    <type>Text</type>
</CustomField>