force-app/main/default/objects/Account/fields/Data_Integrator__c.field-meta.xml
<CustomField>
    <fullName>Data_Integrator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether an account integrates the data they buy from SW in their own product - relevant for active accounts only</description>
    <label>OEM Partner</label>
    <type>Checkbox</type>
</CustomField>