force-app/main/default/objects/Account/fields/Data_Issues_Country_Filter__c.field-meta.xml
<CustomField>
    <fullName>Data_Issues_Country_Filter__c</fullName>
    <description>MIS-7440</description>
    <label>Data Issues Country Filter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AD</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>Aland Islands</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>AN</fullName>
            </value>
            <value>
                <fullName>AO</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AS</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>AW</fullName>
            </value>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BF</fullName>
            </value>
            <value>
                <fullName>BG</fullName>
            </value>
            <value>
                <fullName>BH</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>BJ</fullName>
            </value>
            <value>
                <fullName>BL</fullName>
            </value>
            <value>
                <fullName>BM</fullName>
            </value>
            <value>
                <fullName>BN</fullName>
            </value>
            <value>
                <fullName>BO</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>