force-app/main/default/objects/Account/fields/Data_Issues_Information__c.field-meta.xml
<CustomField>
    <fullName>Data_Issues_Information__c</fullName>
    <description>MIS-7368</description>
    <label>Data Issues Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>