force-app/main/default/objects/Account/fields/Data_Out_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Out_Score__c</fullName>
    <description>MIS-4723</description>
    <formula>BI_Data__r.Data_Out_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Out Score</label>
    <type>Text</type>
</CustomField>