force-app/main/default/objects/Account/fields/Date_Last_Expired__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Expired__c</fullName>
    <description>MIS-8066 - catalyst flag</description>
    <label>Date Last Expired</label>
    <type>Date</type>
</CustomField>