force-app/main/default/objects/Account/fields/Days_in_current_status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_current_status__c</fullName>
    <formula>Floor((Now() - If ( IsBlank (Last_Status_update_date__c),CreatedDate,Last_Status_update_date__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Current Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>