force-app/main/default/objects/Account/fields/Days_In_Trial__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Trial__c</fullName>
    <description>Counts the current day in the trial</description>
    <formula>If(NT_status__c= &quot;Trial&quot;,(Today()+1)-DATEVALUE(First_No_Touch_Pro_Purchase_Date__c) ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Trial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>