force-app/main/default/objects/Account/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity__c</fullName>
    <description>Days since last activity on the account</description>
    <formula>TODAY()- LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days since last activity on the account</inlineHelpText>
    <label>Days Since Last Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>