force-app/main/default/objects/Account/fields/Days_Since_Last_Activity_by_GTM__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity_by_GTM__c</fullName>
    <description>MIS-5724</description>
    <formula>TODAY()- Last_Activity_Date_by_GTM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Activity by GTM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>