force-app/main/default/objects/Account/fields/Debooked_Q_Calculations__c.field-meta.xml
<CustomField>
    <fullName>Debooked_Q_Calculations__c</fullName>
    <description>MIS-8037</description>
    <formula>(
  YEAR(DATEVALUE(Collection_Status_Debooked_Timestamp__c)) * 4
  + CEILING( MONTH(DATEVALUE(Collection_Status_Debooked_Timestamp__c)) / 3 )
)
&lt;=
(
  (YEAR(TODAY()) * 4 + CEILING(MONTH(TODAY()) / 3)) - 2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debooked Q Calculations</label>
    <type>Checkbox</type>
</CustomField>