force-app/main/default/objects/Account/fields/Decision_Culture__c.field-meta.xml
<CustomField>
    <fullName>Decision_Culture__c</fullName>
    <inlineHelpText>What is the company culture? (are decisions made at the divisional level or is it centralized?)</inlineHelpText>
    <label>Decision Culture:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Divisional</fullName>
            </value>
            <value>
                <fullName>Centralized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>