force-app/main/default/objects/Account/fields/Depth_Score__c.field-meta.xml
<CustomField>
    <fullName>Depth_Score__c</fullName>
    <description>MIS-4723</description>
    <formula>BI_Data__r.Depth_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depth Score</label>
    <type>Text</type>
</CustomField>