force-app/main/default/objects/Account/fields/dfox_Account_Score__c.field-meta.xml
<CustomField>
    <fullName>dfox_Account_Score__c</fullName>
    <label>dfox Account Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>