force-app/main/default/objects/Account/fields/dfox_City__c.field-meta.xml
<CustomField>
    <fullName>dfox_City__c</fullName>
    <label>dfox City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>