force-app/main/default/objects/Account/fields/dfox_Country__c.field-meta.xml
<CustomField>
    <fullName>dfox_Country__c</fullName>
    <label>dfox Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>