force-app/main/default/objects/Account/fields/dfox_long_description__c.field-meta.xml
<CustomField>
    <fullName>dfox_long_description__c</fullName>
    <label>dfox long description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>