force-app/main/default/objects/Account/fields/dfox_NACIS_code__c.field-meta.xml
<CustomField>
    <fullName>dfox_NACIS_code__c</fullName>
    <label>dfox NAICS code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>