force-app/main/default/objects/Account/fields/dfox_NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>dfox_NAICS_Description__c</fullName>
    <label>dfox NAICS Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>