force-app/main/default/objects/Account/fields/dfox_Name__c.field-meta.xml
<CustomField>
    <fullName>dfox_Name__c</fullName>
    <label>dfox Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>