force-app/main/default/objects/Account/fields/dfox_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>dfox_Number_of_Employees__c</fullName>
    <label>dfox Number of Employees</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>