force-app/main/default/objects/Account/fields/dfox_Phone__c.field-meta.xml
<CustomField>
    <fullName>dfox_Phone__c</fullName>
    <label>dfox Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>