force-app/main/default/objects/Account/fields/dfox_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>dfox_Postal_Code__c</fullName>
    <label>dfox Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>