force-app/main/default/objects/Account/fields/dfox_State__c.field-meta.xml
<CustomField>
    <fullName>dfox_State__c</fullName>
    <label>dfox State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>