force-app/main/default/objects/Account/fields/dfox_Street__c.field-meta.xml
<CustomField>
    <fullName>dfox_Street__c</fullName>
    <label>dfox Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>