force-app/main/default/objects/Account/fields/dfox_SubIndustry__c.field-meta.xml
<CustomField>
    <fullName>dfox_SubIndustry__c</fullName>
    <description>DataFox custom field</description>
    <label>dfox Sub Industry</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>