force-app/main/default/objects/Account/fields/Direct_Manager__c.field-meta.xml
<CustomField>
    <fullName>Direct_Manager__c</fullName>
    <formula>Owner.Manager.FirstName + &quot; &quot; + Owner.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Manager</label>
    <type>Text</type>
</CustomField>