force-app/main/default/objects/Account/fields/Domain_Estimated_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Domain_Estimated_Visitors__c</fullName>
    <label>Domain Estimated Visitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>