force-app/main/default/objects/Account/fields/Domain_Global_Rank__c.field-meta.xml
<CustomField>
    <fullName>Domain_Global_Rank__c</fullName>
    <label>Domain Global Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>