force-app/main/default/objects/Account/fields/Domain_Routing_Group__c.field-meta.xml
<CustomField>
    <fullName>Domain_Routing_Group__c</fullName>
    <label>Domain Routing Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Inside_Sales</fullName>
                <label>Inside Sales</label>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>