force-app/main/default/objects/Account/fields/Doubtful_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Doubtful_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by Zuora. #1102200</description>
    <label>Doubtful Account</label>
    <type>Checkbox</type>
</CustomField>