force-app/main/default/objects/Account/fields/Email_address_domain_type_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Email_address_domain_type_SFDC__c</fullName>
    <label>Email address domain type SFDC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>