force-app/main/default/objects/Account/fields/Email_UUID__c.field-meta.xml
<CustomField>
    <fullName>Email_UUID__c</fullName>
    <label>Email UUID</label>
    <type>Email</type>
</CustomField>