force-app/main/default/objects/Account/fields/Employees_registration__c.field-meta.xml
<CustomField>
    <fullName>Employees_registration__c</fullName>
    <label>Employees (registration)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>