force-app/main/default/objects/Account/fields/EmployeesMin_registration__c.field-meta.xml
<CustomField>
    <fullName>EmployeesMin_registration__c</fullName>
    <label>Employees Min (registration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>