force-app/main/default/objects/Account/fields/Engaged_Account__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Account__c</fullName>
    <description>MIS-2516</description>
    <formula>BI_Data__r.Engaged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engaged Account</label>
    <type>Checkbox</type>
</CustomField>