force-app/main/default/objects/Account/fields/Estimated_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Visitors__c</fullName>
    <label>Estimated Visitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>