force-app/main/default/objects/Account/fields/Exclude_From_Territory_Owner_Change__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Territory_Owner_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude the account from the owner&apos;s changes in the territory automation.
MIS-3611</description>
    <inlineHelpText>Exclude the account from the owner&apos;s changes in the territory automation.</inlineHelpText>
    <label>Exclude From Territory Owner Change</label>
    <type>Checkbox</type>
</CustomField>