force-app/main/default/objects/Account/fields/Fake_Data__c.field-meta.xml
<CustomField>
    <fullName>Fake_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fake Data</label>
    <type>Checkbox</type>
</CustomField>