force-app/main/default/objects/Account/fields/Fake_Data_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fake_Data_Reason__c</fullName>
    <label>Fake Data Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>