force-app/main/default/objects/Account/fields/Find_Relevant_Leads__c.field-meta.xml
<CustomField>
    <fullName>Find_Relevant_Leads__c</fullName>
    <formula>BI_Data__r.Find_Relevant_Leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Find Relevant Leads</label>
    <type>Text</type>
</CustomField>