force-app/main/default/objects/Account/fields/First_Green_Health_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Green_Health_Score_Date__c</fullName>
    <label>First Green Health Score Date Old field</label>
    <type>Date</type>
</CustomField>