force-app/main/default/objects/Account/fields/First_Pro_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Pro_Purchase_Date__c</fullName>
    <label>First Pro Purchase Date Old field</label>
    <type>Date</type>
</CustomField>