force-app/main/default/objects/Account/fields/First_touch_pro_purchase_date__c.field-meta.xml
<CustomField>
    <fullName>First_touch_pro_purchase_date__c</fullName>
    <description>MIS-1112</description>
    <formula>BI_Data__r.First_touch_pro_purchase_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First touch pro purchase date</label>
    <type>Date</type>
</CustomField>