force-app/main/default/objects/Account/fields/Forecasting_Division__c.field-meta.xml
<CustomField>
    <fullName>Forecasting_Division__c</fullName>
    <description>MIS-1519 New division fields in SFDC
+ MIS-4064</description>
    <formula>Owner_Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Reporting Division</label>
    <type>Text</type>
</CustomField>