force-app/main/default/objects/Account/fields/fr_Account_Score_number__c.field-meta.xml
<CustomField>
    <fullName>fr_Account_Score_number__c</fullName>
    <formula>BI_Data__r.Account_Score_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Score number</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>