force-app/main/default/objects/Account/fields/fr_Account_Scoring_Stars__c.field-meta.xml
<CustomField>
    <fullName>fr_Account_Scoring_Stars__c</fullName>
    <formula>BI_Data__r.Account_Scoring_Stars__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Scoring Stars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>