force-app/main/default/objects/Account/fields/fr_ARR__c.field-meta.xml
<CustomField>
    <fullName>fr_ARR__c</fullName>
    <formula>BI_Data__r.ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>