force-app/main/default/objects/Account/fields/fr_First_Green_Health_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>fr_First_Green_Health_Score_Date__c</fullName>
    <formula>BI_Data__r.First_Green_Health_Score_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Green Health Score Date</label>
    <type>Date</type>
</CustomField>