force-app/main/default/objects/Account/fields/fr_First_Pro_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>fr_First_Pro_Purchase_Date__c</fullName>
    <formula>BI_Data__r.First_Pro_Purchase_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Pro Purchase Date</label>
    <type>Date</type>
</CustomField>