force-app/main/default/objects/Account/fields/fr_Hierarchy_Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>fr_Hierarchy_Total_ARR__c</fullName>
    <formula>BI_Data__r.Total_Arr_c__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy Total ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>