force-app/main/default/objects/Account/fields/fr_High_User_Engagement__c.field-meta.xml
<CustomField>
    <fullName>fr_High_User_Engagement__c</fullName>
    <formula>BI_Data__r.High_User_Engagement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High User Engagement</label>
    <type>Checkbox</type>
</CustomField>