force-app/main/default/objects/Account/fields/fr_Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>fr_Next_Renewal_Date__c</fullName>
    <formula>fr_NextRenewalDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Renewal Date</label>
    <type>Date</type>
</CustomField>