force-app/main/default/objects/Account/fields/fr_NextRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>fr_NextRenewalDate__c</fullName>
    <label>Next Renewal Date Help Field</label>
    <type>Date</type>
</CustomField>