force-app/main/default/objects/Account/fields/fr_Number_Of_Available_Seats__c.field-meta.xml
<CustomField>
    <fullName>fr_Number_Of_Available_Seats__c</fullName>
    <formula>BI_Data__r.Number_Of_Available_Seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Allocated Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>