force-app/main/default/objects/Account/fields/fr_Past_Meeting_Opp__c.field-meta.xml
<CustomField>
    <fullName>fr_Past_Meeting_Opp__c</fullName>
    <formula>BI_Data__r.Past_Meeting_Opp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Meeting/Opp</label>
    <type>Checkbox</type>
</CustomField>