force-app/main/default/objects/Account/fields/fr_Relationship_Score__c.field-meta.xml
<CustomField>
    <fullName>fr_Relationship_Score__c</fullName>
    <formula>IF( BI_Data__r.relationship_score__c  = &quot;Critical relationship&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150O000004xFpH&quot;, &quot;red&quot; , 16, 50)&amp;&quot; &quot;&amp;&quot;Critical Relationship &quot;,

IF( BI_Data__r.relationship_score__c = &quot;Expand contacts and improve Reply rate&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01567000008E5U5&quot;, &quot;orange&quot;, 16, 50 )&amp;&quot; &quot;&amp;&quot;Expand contacts and improve Reply rate &quot; ,

IF( BI_Data__r.relationship_score__c = &quot;Improve Reply Rate&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150O000004xWeC&quot;, &quot;yellow&quot;, 16, 50 )&amp;&quot; &quot;&amp;&quot;Improve Reply Rate &quot; ,

IF( BI_Data__r.relationship_score__c = &quot;Healthy Relationship&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150O000004xFo5&quot;, &quot;green&quot;, 16, 50 )&amp;&quot; &quot;&amp;&quot;Healthy Relationship &quot;,

IF( BI_Data__r.relationship_score__c = &quot;Expand to more contacts&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150O000004xFp7&quot;, &quot;Blue&quot;, 16, 50 )&amp;&quot; &quot;&amp;&quot;Expand to new contacts &quot;,

&quot;&quot;)))))</formula>
    <label>Relationship Score</label>
    <type>Text</type>
</CustomField>