force-app/main/default/objects/Account/fields/fr_SYS_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>fr_SYS_Health_Score__c</fullName>
    <formula>TEXT( BI_Data__r.SYS_Health_Score__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SYS Health Score</label>
    <type>Text</type>
</CustomField>