force-app/main/default/objects/Account/fields/fr_X100K_Website_Visits__c.field-meta.xml
<CustomField>
    <fullName>fr_X100K_Website_Visits__c</fullName>
    <formula>BI_Data__r.X100K_Website_Visits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>100K+ Website Visits</label>
    <type>Checkbox</type>
</CustomField>