force-app/main/default/objects/Account/fields/Frenemy_Sent__c.field-meta.xml
<CustomField>
    <fullName>Frenemy_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frenemy Sent</label>
    <type>Checkbox</type>
</CustomField>