force-app/main/default/objects/Account/fields/Future_Projects_Budget_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Future_Projects_Budget_Approval_Status__c</fullName>
    <label>Future Projects - Budget Approval Status</label>
    <type>TextArea</type>
</CustomField>