force-app/main/default/objects/Account/fields/Future_Projects_Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>Future_Projects_Decision_Makers__c</fullName>
    <label>Future Projects - Decision Makers</label>
    <type>TextArea</type>
</CustomField>