force-app/main/default/objects/Account/fields/Future_Projects_KPIs_Measured__c.field-meta.xml
<CustomField>
    <fullName>Future_Projects_KPIs_Measured__c</fullName>
    <label>Future Projects - KPIs Measured</label>
    <type>TextArea</type>
</CustomField>