force-app/main/default/objects/Account/fields/Future_Projects_Names__c.field-meta.xml
<CustomField>
    <fullName>Future_Projects_Names__c</fullName>
    <label>Future Projects - Names</label>
    <type>TextArea</type>
</CustomField>