force-app/main/default/objects/Account/fields/Future_Projects_Time_Frames__c.field-meta.xml
<CustomField>
    <fullName>Future_Projects_Time_Frames__c</fullName>
    <label>Future Projects - Time Frames</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6-12 months</fullName>
            </value>
            <value>
                <fullName>1-2 years</fullName>
            </value>
            <value>
                <fullName>2+ years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>