force-app/main/default/objects/Account/fields/Global_Pass__c.field-meta.xml
<CustomField>
    <fullName>Global_Pass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-4209</description>
    <label>Global Pass</label>
    <type>Checkbox</type>
</CustomField>