force-app/main/default/objects/Account/fields/Groudon_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Groudon_Call_Status__c</fullName>
    <label>Groudon Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Groudon_Call_Status</valueSetName>
    </valueSet>
</CustomField>