force-app/main/default/objects/Account/fields/Groudon_Enrichment_Date__c.field-meta.xml
<CustomField>
    <fullName>Groudon_Enrichment_Date__c</fullName>
    <label>Groudon Enrichment Date</label>
    <type>DateTime</type>
</CustomField>