force-app/main/default/objects/Account/fields/Groudon_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Groudon_Timestamp__c</fullName>
    <label>Groudon Timestamp</label>
    <type>DateTime</type>
</CustomField>