force-app/main/default/objects/Account/fields/Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Group_Description__c</fullName>
    <description>If you want to mention the specific Team/ Group/ Division you are selling to, please add it here</description>
    <label>Team/ Group/ Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>