force-app/main/default/objects/Account/fields/Has_an_app__c.field-meta.xml
<CustomField>
    <fullName>Has_an_app__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-7233 - removed &quot;(Deprecated)&quot; from label
MIS-2304</description>
    <label>Company has an app?</label>
    <type>Checkbox</type>
</CustomField>